tests/rosetta/out/C/bitmap-midpoint-circle-algorithm.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:56Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:56Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int initGrid(int size) {
  int y = 0;
  while (y < size) {
    list_string row = list_string_create(0);
    int x = 0;
    while (x < size) {
      list_string tmp1 = list_string_create(1);
      tmp1.data[0] = " ";
      list_string tmp2 = concat_list_string(row, tmp1);
      row = tmp2;
      x = x + 1;
    }
    g = 0;
    y = y + 1;
  }
  return g;
}

int set(int g, int x, int y) {
  if (x >= 0 && x < g.data[0].len && y >= 0 && y < g.len) {
    g.data[y].data[x] = "#";
  }
}

int circle(int r) {
  int size = r * 2 + 1;
  int g = initGrid(size);
  int x = r;
  int y = 0;
  int err = 1 - r;
  while (y <= x) {
    set(g, r + x, r + y);
    set(g, r + y, r + x);
    set(g, r - x, r + y);
    set(g, r - y, r + x);
    set(g, r - x, r - y);
    set(g, r - y, r - x);
    set(g, r + x, r - y);
    set(g, r + y, r - x);
    y = y + 1;
    if (err < 0) {
      err = err + 2 * y + 1;
    } else {
      x = x - 1;
      err = err + 2 * (y - x) + 1;
    }
  }
  return g;
}

char *trimRight(list_string row) {
  int end = row.len;
  while (end > 0 && row.data[end - 1] == " ") {
    end = end - 1;
  }
  char *s = "";
  int i = 0;
  while (i < end) {
    char *tmp3 = concat_string(s, row.data[i]);
    s = tmp3;
    i = i + 1;
  }
  return s;
}

int _mochi_main() {
  int g = circle(10);
  for (int tmp4 = 0; tmp4 < g.len; tmp4++) {
    list_string row = g.data[tmp4];
    printf("%s\n", trimRight(row));
  }
  return 0;
}
int main() { return _mochi_main(); }
